fix css issue on small devices for navbar menu links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,9 +462,10 @@
              width: 70%;
          }
 
-         .home {
-             display: none;
-         }
+         #menu {
+            font-size: 75%;
+            letter-spacing: 2px;
+        }
 
          table {
              margin-top: 5px;
